fix: show more item of entity list layout bug

--- a/_sass/_view.scss
+++ b/_sass/_view.scss
@@ -142,7 +142,7 @@
   display: table-cell;
   border-top: 1px solid lightgray;
   font-weight: bold;
-  width: 150px;
+  width: 130px;
 }
 
 .view__field_name_box {
